[package]
name = "pm-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
progress-logger = "0.3.1"

[dev-dependencies]
hdf5 = "0.8"
ndarray = "0.15"
pretty_assertions = "1.2"
criterion = "0.3"
ureq = "2.4"
anyhow = "1.0"
argh = "0.1"
env_logger = "0.9"

[profile.release]
debug = true

[[bench]]
name = "benchmarks"
harness = false
